test/sema/partial_init_struct.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
struct S {
    x: i32,
    y: i32,
}

fn main() -> void {
    let s: S;
    s.x = 10;
    // CHECK: [[# @LINE - 1 ]]:5: error: 's' is not initialized
}